--- a/client/src/components/Slider/slider.scss
+++ b/client/src/components/Slider/slider.scss
@@ -2,6 +2,7 @@
     height: calc(100vh - 80px);
     width: 100vw;
     position: relative;
+    overflow-x: hidden;
     .container{
         width: 300vw;
         height: 100%;
